--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -7,36 +7,46 @@
     <title>Muñon-Zitto</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/CSS/stylescarrousel.css">
+    <link rel="stylesheet" href="/CSS/style.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js" defer></script>
     <script src="/JS/carrousel.js" defer></script>
 </head>
 
 <body>
-    <div class="swiper">
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <img src="/IMG/TortasCoc.jpg" alt="">
+    <header>
+        <a title="Muñon-Zitto" href="/index.html"><img src="" alt="Logo de Muñon-Zitto" width="90"><h1 href="/index.html">Muñon-Zitto</h1></a>
+    </header>
+    <main>
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <img src="/IMG/CroissantBicolorCoc.jpg" alt="Croissant Bicolor Cocinado">
+                </div>
+                <div class="swiper-slide">
+                    <img src="/IMG/RollChocolateCoc.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="/IMG/MedialunasCoc.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="/IMG/CroissantCoc.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="/IMG/05.jpg" alt="">
+                </div>
+                <div class="swiper-slide">
+                    <img src="/IMG/PanificadosCoc.jpg" alt="">
+                </div>
             </div>
-            <div class="swiper-slide">
-                <img src="/IMG/RollPistachoCoc.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="/IMG/Hoja.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="/IMG/04.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="/IMG/05.jpg" alt="">
-            </div>
-            <div class="swiper-slide">
-                <img src="/IMG/06.jpg" alt="">
-            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
         </div>
-        <div class="swiper-pagination"></div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-    </div>
+    </main>
+    <footer>
+        <p>© 2024 Muñon-Zitto</p>
+        <p>Desarrollado por Emanuel Muñon y Agustina Zitto</p>
+    </footer>
 </body>
 
 </html>
