--- a/HTML/facturas.html
+++ b/HTML/facturas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,12 @@
     <link rel="icon" href="">
 </head>
 <body>
-    
+    <nav><!-- Navegación (links a las diferentes páginas) -->
+        <a title="Muñon-Zitto" href="/HTML/index.html"><img src="" alt="Logo de Muñon-Zitto" width="90"><h1 href="/HTML/index.html">Muñon-Zitto</h1></a>
+        <a href="/HTML/tortas.html"><button class="tortas" alt="Tortas">Tortas</button></a>
+        <a href="/HTML/facturas.html"><button class="facturas" alt="Facturas">Facturas</button></a>
+        <a href="/HTML/canela.html"><button class="canela" alt="canela">Canela</button></a>
+        <a href="/HTML/contacto.html"><button class="contact">Contactanos</button></a>
+    </nav>
 </body>
 </html>
